<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignupActivity">
    <ImageView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_cloud"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/background_bottom"/>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/llCenter"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/llAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/crAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"/>
            <ImageView
                android:src="@drawable/ic_camera"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/sign_up_new_account"
            android:textSize="20sp"
            android:textColor="@color/gray_700"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCenter"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_border_8dp_stroke_1dp"
            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/name"
                style="@style/TextStyle"
                android:importantForAutofill="noExcludeDescendants"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtName"
                android:background="@null"
                style="@style/TextStyle"
                android:hint="@string/enter_name"
                android:textColor="@color/gray_900"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_border_8dp_stroke_1dp"
            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/email"
                style="@style/TextStyle"
                android:textStyle="bold"
                android:importantForAutofill="noExcludeDescendants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                android:background="@null"
                style="@style/TextStyle"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:textColor="@color/gray_900"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_border_8dp_stroke_1dp"
            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/password"
                style="@style/TextStyle"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <app.example.landmarkremarkapplication.widget.PasswordEditText
                android:id="@+id/edtPassword"
                android:background="@null"
                style="@style/TextStyle"
                android:hint="@string/enter_password"
                android:textColor="@color/gray_900"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_border_8dp_stroke_1dp"
            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/password_again"
                style="@style/TextStyle"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <app.example.landmarkremarkapplication.widget.PasswordEditText
                android:id="@+id/edtPasswordAgain"
                android:background="@null"
                style="@style/TextStyle"
                android:hint="@string/enter_password"
                android:textColor="@color/gray_900"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/bg_border_8dp_blue_500"
            android:text="@string/sign_up"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBackSign"
        style="@style/EditTextStyle"
        android:layout_marginBottom="36dp"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/back_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>