<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginHorizontal="20dp"
    android:background="@drawable/bg_border_8dp_stroke_1dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_gravity="center_horizontal"
        android:text="@string/add_new_notes"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_note"
        style="@style/EditTextStyle"
        android:background="@drawable/bg_border_8dp_stroke_1dp"
        android:layout_marginBottom="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_border_8dp_stroke_1dp"
            android:backgroundTint="@color/gray_300"
            android:elevation="0dp"
            android:gravity="center"
            android:paddingVertical="4dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/red_500"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_border_8dp_stroke_1dp"
            android:backgroundTint="@color/blue_500"
            android:layout_marginStart="4dp"
            android:elevation="0dp"
            android:gravity="center"
            android:paddingVertical="4dp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>