<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">
    <ImageView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_cloud"/>
    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/llCenter"
        android:src="@drawable/ic_map_logo"
        />
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/background_bottom"/>
   <LinearLayout
        android:id="@+id/llCenter"
       android:layout_centerInParent="true"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingHorizontal="16dp">
       <androidx.appcompat.widget.AppCompatEditText
           android:id="@+id/edtEmail"
           android:inputType="textEmailAddress"
           style="@style/EditTextStyle"
           android:background="@drawable/bg_border_8dp_stroke_1dp"
           android:hint="@string/enter_email"
           android:paddingVertical="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <app.example.landmarkremarkapplication.widget.PasswordEditText
           android:id="@+id/edtPassword"
           android:inputType="textPassword"
           android:hint="@string/enter_password"
           style="@style/EditTextStyle"
           android:layout_marginTop="16dp"
           android:background="@drawable/bg_border_8dp_stroke_1dp"
           android:paddingVertical="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btnSign"
           android:text="@string/sign"
           android:textSize="20sp"
           android:textAllCaps="true"
           android:textStyle="bold"
           android:paddingVertical="2dp"
           android:textColor="@color/white"
           android:background="@drawable/bg_border_8dp_blue_500"
           android:layout_marginTop="16dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
   </LinearLayout>
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_below="@+id/llCenter"
        android:background="@drawable/bg_circle_gray"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:onClick="signingGoogle"
        android:layout_width="50dp"
        android:layout_height="50dp">
        <ImageView
            android:src="@drawable/ic_google"
            android:layout_width="30dp"
            android:layout_height="30dp"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_new_account"
        style="@style/EditTextStyle"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:textSize="16sp"/>


</RelativeLayout>