<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.InformationActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_horizontal"
            android:text="@string/information_account"
            style="@style/TextStyle"
            android:importantForAutofill="noExcludeDescendants"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_cloud"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/background_bottom"/>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/llCenter"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/llAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/crAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCenter"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_border_8dp_stroke_1dp"
            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/name"
                style="@style/TextStyle"
                android:importantForAutofill="noExcludeDescendants"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:background="@null"
                style="@style/TextStyle"
                android:textColor="@color/gray_900"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_border_8dp_stroke_1dp"
            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/email"
                style="@style/TextStyle"
                android:textStyle="bold"
                android:importantForAutofill="noExcludeDescendants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:background="@null"
                style="@style/TextStyle"
                android:textColor="@color/gray_900"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUot"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/bg_border_8dp_blue_500"
            android:text="@string/sign_out"/>
    </LinearLayout>

</RelativeLayout>